right click and cron experssion check

--- a/LazyAss.csproj
+++ b/LazyAss.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Quartz" Version="3.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <TrimmerRootAssembly Include="System.IO.FileSystem" />
   </ItemGroup>
 </Project>
